[workspace]
resolver = "2"
members = [
  "crates/shark",
  "crates/derive",
  "crates/wasm"
, "crates/tui", "crates/benchmark"]

[profile.release]
panic = "unwind"

[workspace.dependencies]
log = "0.4.22"
env_logger = "0.11.3"
once_cell = "1.20.2"
chrono = "0.4.38"
thiserror = "1.0.63"
anyhow = "1.0.91"
enum_dispatch = "0.3.13"
crossterm = "0.28.1"
ratatui = "0.28.0"
tui-tree-widget = "0.22.0"
clap = "4.5.20"
js-sys = "0.3.69"
wasm-bindgen = "0.2.93"
strum = "0.26.3"
strum_macros = "0.26.3"
serde = "1.0.215"
serde_json = "1.0.128"
syn = "2.0"
quote = "1.0"
prettytable-rs = "^0.10"
instant = "0.1.13"