[package]
name = "pcap"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[lints.clippy]
len_zero = "allow"
type_complexity = "allow"
single_match = "allow"

[dependencies]
chrono.workspace = true
log.workspace = true
thiserror.workspace = true
anyhow.workspace = true
enum_dispatch.workspace = true
strum.workspace = true
strum_macros.workspace = true
serde = { workspace = true, features = ["derive"]}
serde_json.workspace = true
ahash = { version = "0.8", default-features = false }
rustc-hash = "1.1"
memchr = "2.7.4"
flate2 = "1.0"
brotli = "3.3"
zstd = "0.12"

[dev-dependencies]
util = { path = "../util" }
criterion = "0.5"

[[bench]]
name = "pcap_bench"
harness = false