[package]
name = "pcap_gui"
description = "pcap/pcapng analyzer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "pcap_gui"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri-plugin-dialog = "2.0"
tauri-plugin-opener = "2"
tauri = { version = "2", features = [] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

