[package]
name = "pcap"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["lib"]

[dependencies]
chrono.workspace = true
log.workspace = true
pcap_derive = { path = "../derive" }
thiserror.workspace = true
anyhow.workspace = true
enum_dispatch.workspace = true
strum = "0.25"
strum_macros = "0.25"
serde = { workspace = true, features = ["derive"]}
serde_json.workspace = true
once_cell.workspace = true
rustc-hash = "1.1"
