[package]
name = "shark"
version = "0.2.0"
authors = ["sankooc <sankooc@163.com>"]
description = "pcap/pcapng file analyzer"
edition = "2021"
repository = "https://github.com/sankooc/vs-shark"
readme="../README.MD"
license-file = "../LICENSE"

[lib]
crate-type = ["lib"]

[dependencies]
chrono = "0.4.38"
log = "0.4.22"
pcap_derive = { path = "../derive" }
thiserror = "1.0.63"
anyhow = "1.0.91"
enum_dispatch = "0.3.13"
strum = { version = "0.26.3", features = ["derive"]}
strum_macros = "0.26.3"
serde = {version = "1.0.210", features = ["derive"]}
serde_json = "1.0.128"


[dev-dependencies]
env_logger = "0.11.3"
