[package]
name = "shark"
version = "0.2.0"
authors = ["sankooc <sankooc@163.com>"]
description = "pcap/pcapng file analyzer"
edition = "2021"
repository = "https://github.com/sankooc/vs-shark"
readme="../README.MD"
license-file = "../LICENSE"

[lib]
crate-type = ["lib"]

[dependencies]
chrono.workspace = true
log.workspace = true
pcap_derive = { path = "../derive" }
thiserror.workspace = true
anyhow.workspace = true
enum_dispatch.workspace = true
strum = { workspace = true, features = ["derive"]}
strum_macros.workspace = true
serde = { workspace = true, features = ["derive"]}
serde_json.workspace = true
once_cell.workspace = true

[dev-dependencies]
env_logger.workspace = true
