[package]
name = "pcaps"
version = "0.0.1"
edition = "2021"

[dependencies]
clap = { workspace = true, features = ["derive"] }
log.workspace = true
crossterm.workspace = true
ratatui.workspace = true
pcap = { path = "../parser" }
util = { path = "../util" }
anyhow.workspace = true
tui-tree-widget.workspace = true
enum_dispatch.workspace = true

flate2 = "1.0"
brotli = "3.3"
zstd = "0.12"
syntect = "5.2.0"

# tokio = { version = "1", features = ["full"] }
