[package]
name = "util"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
pcap = { path = "../parser" }
anyhow.workspace = true
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"]}
serde_json.workspace = true
