[package]
name = "nshark"
version = "0.3.6"
authors = ["sankooc <sankooc@163.com>"]
description = "pcap/pcapng file analyzer"
edition = "2021"
repository = "https://github.com/sankooc/vs-shark"
readme="./README.MD"
license-file = "./LICENSE"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys.workspace = true
wasm-bindgen.workspace = true
shark = { path = "../shark" }
instant= {workspace = true, features = ["wasm-bindgen"]}

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O', '--enable-bulk-memory']


[dev-dependencies]
log.workspace = true
env_logger.workspace = true
