[package]
name = "wasm-pcps"
version = "0.3.6"
authors = ["sankooc <sankooc@163.com>"]
description = "pcap/pcapng file analyzer"
edition = "2021"
repository = "https://github.com/sankooc/vs-shark"
readme=false
license-file = "./LICENSE"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys.workspace = true
wasm-bindgen.workspace = true
pcap = { path = "../parser" }
instant= {workspace = true, features = ["wasm-bindgen"]}
serde = { workspace = true, features = ["derive"]}
serde_json.workspace = true
flate2 = "1.0"
brotli = "3.3"
zstd = "0.12"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O', '--enable-bulk-memory']


[dev-dependencies]
log.workspace = true
env_logger.workspace = true
