[package]
name = "wasm-pcps"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository = "https://github.com/sankooc/vs-shark"
readme=false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys.workspace = true
wasm-bindgen.workspace = true
pcap = { path = "../parser" }
instant= {workspace = true, features = ["wasm-bindgen"]}
serde = { workspace = true, features = ["derive"]}
serde_json.workspace = true
anyhow.workspace = true
[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O', '--enable-bulk-memory']


[dev-dependencies]
log.workspace = true
env_logger.workspace = true
